added role mapping

--- a/deploy_ear.cfg
+++ b/deploy_ear.cfg
@@ -1,11 +1,8 @@
-## config file template to be used with deploy_ear.py
-#######################################################
-### DO NOT use quotation marks in properties values ###
-#######################################################
+## config file template to be used with deploy_war.py
 
 [app]
 name = RminAdminEAR_devops_test
-#edition = _1.0.0
+#edition = 1.0.0
 source = /it/mnmid/mnmidroot/tmp_volatile/aleks/share/apps/rmin/RminAdminEAR.ear
 ds_resource = []
 
